fixed a problem with flex alignment in landing page

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -78,7 +78,7 @@ header {
 /* ===== LANDING PAGE ===== */
 #landing-page {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     .quote-section {
         padding: 5rem;
